--- a/hw 1.ipynb
+++ b/hw 1.ipynb
@@ -200,21 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите номер фигуры: круг = 1 , треугольник = 2: 4\n",
-      "ERROR\n"
+      "Введите номер фигуры: круг = 1 , треугольник = 2 , прямоугольник = 3 3\n",
+      "Введите длину прямоугольника, мм: 21\n",
+      "Введите ширину прямоугольника, мм: 2\n",
+      "Площадь прямоугольника =  42 кв.мм\n"
      ]
     }
    ],
    "source": [
     "# Задание 6\n",
-    "x = int(input('Введите номер фигуры: круг = 1 , треугольник = 2: '))\n",
+    "x = int(input('Введите номер фигуры: круг = 1 , треугольник = 2 , прямоугольник = 3 '))\n",
     "if x == 1:\n",
     "    r = int(input('Введите радиус круга, мм: '))\n",
     "    S = 3.141592653589793 * (r ** 2)\n",
@@ -226,6 +228,11 @@
     "    p = (a + b + c) / 2\n",
     "    S = (p * (p - a) * (p - b) * (p - c)) ** (1./2)\n",
     "    print('Площадь треугольника = ', S,'кв.мм')\n",
+    "elif x == 3:\n",
+    "    a = int(input('Введите длину прямоугольника, мм: '))\n",
+    "    b = int(input('Введите ширину прямоугольника, мм: '))\n",
+    "    S = a * b\n",
+    "    print('Площадь прямоугольника = ', S,'кв.мм')\n",
     "else:\n",
     "    print('ERROR')\n",
     "       "
